--- a/env.example
+++ b/env.example
@@ -1,12 +1,32 @@
+# Server Public IP
+SERVER_PUBLIC_IP=54.37.230.48
+
+# Database
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=selos_db
+MYSQL_USER=selos_user
+MYSQL_PASSWORD=selos_password
+MYSQL_PORT=3306
+
 # Backend Environment Variables
-DATABASE_URL="mysql://selos_db_user:Momo08545547@ab110337-001.eu.clouddb.ovh.net:35286/selos_db"
-JWT_SECRET="Mohamed08545547@"
-JWT_EXPIRES_IN="7d"
+DATABASE_URL="mysql://selos_user:selos_password@mysql:3306/selos_db"
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=7d
+BACKEND_PORT=3001
 
 # Frontend Environment Variables
-NEXTAUTH_SECRET="your-nextauth-secret"
-NEXTAUTH_URL="http://localhost:3000"
-NEXT_PUBLIC_API_URL="http://localhost:3001"
+NEXTAUTH_SECRET=your-nextauth-secret-change-this-in-production
+NEXTAUTH_URL=http://54.37.230.48:3000
+NEXT_PUBLIC_API_URL=http://54.37.230.48:3001
+FRONTEND_PORT=3000
+
+# Frontend Retails
+NEXTAUTH_URL_RETAILS=http://54.37.230.48:3002
+FRONTEND_RETAILS_PORT=3002
+
+# Selos Mobile
+MOBILE_PORT=3003
+VITE_API_URL=http://54.37.230.48:3001
 
 # Business Central Integration (Frontend - Server-side API routes)
 # These variables are used in Next.js API routes (server-side only)
