--- a/selos-mobile/env.example
+++ b/selos-mobile/env.example
@@ -1,6 +1,9 @@
 # API Backend URL
 # ================
-# IMPORTANT: Pour l'APK Android, vous DEVEZ définir cette variable avec l'IP locale de votre machine
+# IMPORTANT: Pour l'APK Android, vous DEVEZ définir cette variable avec l'IP publique du serveur
+
+# Production Server (IP publique)
+VITE_API_URL=http://54.37.230.48:3001
 
 # Option 1: Développement local (depuis navigateur web)
 # VITE_API_URL=http://localhost:3001
@@ -14,10 +17,4 @@
 
 # Option 3: Émulateur Android
 # L'application détecte automatiquement et utilise http://10.0.2.2:3001
-
-# Option 4: Serveur de production
-# VITE_API_URL=https://votre-serveur.com
-
-# Exemple pour appareil physique:
-VITE_API_URL=http://192.168.1.66:3001
 
