fix: convertir le seed en JavaScript pour Ã©viter les problÃ¨mes ts-node dans Docker

--- a/backend/package.json
+++ b/backend/package.json
@@ -70,7 +70,7 @@
     "typescript-eslint": "^8.20.0"
   },
   "prisma": {
-    "seed": "ts-node -r tsconfig-paths/register --transpile-only prisma/seed.ts"
+    "seed": "node prisma/seed.js"
   },
   "jest": {
     "moduleFileExtensions": [
